--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,11 @@
 /* Custom */
 
+// for company profile page
+
+.nav-tabs > li {
+  margin-bottom: 0 !important;
+}
+
 .navbar-nav>li>a, .navbar-nav>div>a {
   padding-top: 13px !important;
   font-size: 25px;
