--- a/app/components/welcome/welcome.skills.html
+++ b/app/components/welcome/welcome.skills.html
@@ -15,5 +15,5 @@
     <div alert-box this-alert="welcome.alert"></div>
     <h4 style="margin-bottom: 13px;">
         <a class="btn btn-info pull-left" ui-sref="welcome.profile">Back</a>
-        <a class="btn btn-info pull-right" ui-sref="welcome.companies">Continue</a></h4>
+        <a class="btn btn-info pull-right" ui-sref="welcome.invite">Continue</a></h4>
 </div>
