--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -54,7 +54,7 @@
                                     Website:
 
                                 </h4>
-                                <input type="text" placeholder="www.." ng-model="add.selectedCompany.website" class="form-control input-lg">
+                                <input type="text" placeholder="www..." ng-model="add.selectedCompany.website" class="form-control input-lg">
                             </div>
                             <div class="form-group col-lg-6" ng-if="add.is_resource">
                                 <h4 class="w400">
