--- a/app/components/companies/company.list.item.html
+++ b/app/components/companies/company.list.item.html
@@ -8,13 +8,13 @@
         <a ng-show="(item.value.profile.summary).length > 0" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i class="fa fa-chevron-down fa-fw"></i>
         </a>
         <span ng-if="!item.value.resource">
-            <li ng-repeat="val in item.value.profile.parents | limitTo:2" class="role-right">
-                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{val[0].toUpperCase() + val.slice(1);}}</button>
+            <li class="role-right">
+                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.value.profile.parents[0][0].toUpperCase() + item.value.profile.parents[0].slice(1);}}</button>
             </li>
         </span>
         <span ng-if="item.value.resource">
-            <li ng-repeat="val in item.value.resource_types | limitTo:2" class="role-right">
-                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{val[0].toUpperCase() + val.slice(1);}}</button>
+            <li class="role-right">
+                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.value.resource_types[0][0].toUpperCase() + item.value.resource_types[0].slice(1);}}</button>
             </li>
         </span>
         <br>
