--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -1,6 +1,6 @@
 <div small-header class="normalheader" style="padding: 0 0 25px 0;">
     <div class="row" style="margin-top:-10px;">
-        <div class="col-md-4" style="padding-top:10px;">
+        <div class="col-md-6" style="padding-top:10px;">
             <div class="hpanel">
                 <div class="panel-body" style="height: 85px;">
                     <div class="pull-left" style="padding-left:0;">
@@ -17,19 +17,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4" style="padding-top:10px;">
-            <div class="hpanel">
-                <div class="panel-body" style="height: 85px;">
-                    <div style="padding-right:0;">
-                        <div ng-repeat="p in dashboard.top.parents | limitTo: 3" style="padding-left: 0; padding-right: 0; ">
-                            <div class="col-xs-3" style="margin-top:-3px; padding-left: 0; padding-right: 0; text-align: right; overflow: hidden; text-overflow: ellipsis;"><a ui-sref="community.dashboard({community_path: p.label, community: nav.communities[p.label], query: '*', location_path: nav.location.key})" style="white-space:nowrap;">{{p.label[0].toUpperCase() + p.label.slice(1);}}</a></div>
-                            <div class="col-xs-9" style="padding-left: 10px; padding-right: 0;"><uib-progressbar value="p.value" max="dashboard.max" type="success" class="progress-small full"></uib-progressbar></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4" style="padding-top:10px;">
+
+        <div class="col-md-6" style="padding-top:10px;">
             <div class="hpanel">
                 <div class="panel-body" style="padding: 10px 5px; height: 85px;">
                     <div class="col-xs-8">
@@ -64,36 +53,7 @@
 <div>
     <div id="dash-tour" tour-step order="0" title="The {{nav.community.profile.name.split(',')[0] }} Startup Community" content="Your community includes people and companies, organized by industry and skillset." placement="top">
         <div class="row">
-            <div class="col-xs-12 col-sm-6">
-                <div class="hpanel" style="border-top: 2px solid #34495E;">
-                    <div class="panel-body" style="padding: 10px 5px;">
-                        <div class="col-xs-8">
-                            <div class="stats-title pull-left">
-                                <a ui-sref="{{'company.list' + nav.nav_url}}">
-                                    <h3>Companies</h3>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-4">
-                            <div class="stats-icon pull-right">
-                                <a ui-sref="{{'company.list' + nav.nav_url}}">
-                                    <h3 style="color:#34495E;">{{dashboard.top.companies.count}}</h3>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel-footer" style="background: #fff;">
-                        <div ng-repeat="item in dashboard.top.companies.entries | limitTo: 3">
-                            <div style="margin-right: -2px; margin-bottom:-5px;">
-                                <div ng-if="$first" style="padding-top:5px;"></div>
-                                <div class="row" ng-include="'components/companies/company.list.item.html'"></div>
-                                <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-4">
                 <div class="hpanel hblue" >
                     <div class="panel-body" style="padding: 10px 5px;">
                         <div class="col-xs-8">
@@ -122,23 +82,82 @@
                     </div>
                 </div>
             </div>
+            <div class="col-xs-12 col-sm-4">
+                <div class="hpanel" style="border-top: 2px solid #34495E;">
+                    <div class="panel-body" style="padding: 10px 5px;">
+                        <div class="col-xs-8">
+                            <div class="stats-title pull-left">
+                                <a ui-sref="{{'company.list' + nav.nav_url}}">
+                                    <h3>Companies</h3>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-4">
+                            <div class="stats-icon pull-right">
+                                <a ui-sref="{{'company.list' + nav.nav_url}}">
+                                    <h3 style="color:#34495E;">{{dashboard.top.companies.count}}</h3>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer" style="background: #fff;">
+                        <div ng-repeat="item in dashboard.top.companies.entries | limitTo: 3">
+                            <div style="margin-right: -2px; margin-bottom:-5px;">
+                                <div ng-if="$first" style="padding-top:5px;"></div>
+                                <div class="row" ng-include="'components/companies/company.list.item.html'"></div>
+                                <div ng-if="$last" style="margin-bottom:-32px;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+                <div class="hpanel" style="border-top: 2px solid #ffb606;">
+                    <div class="panel-body" style="padding: 10px 5px;">
+                        <div class="col-xs-8">
+                            <div class="stats-title pull-left">
+                                <a ui-sref="{{'resource.list' + nav.nav_url}}">
+                                    <h3>Resources</h3>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-4">
+                            <div class="stats-icon pull-right">
+                                <a ui-sref="{{'resource.list' + nav.nav_url}}">
+                                    <h3 style="color:#34495E;">{{dashboard.top.resources.count}}</h3>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer" style="background: #fff;">
+                        <div ng-repeat="item in dashboard.top.resources.entries | limitTo: 3">
+                            <div style="margin-right: -2px; margin-bottom:-5px;">
+                                <div ng-if="$first" style="padding-top:5px;"></div>
+                                <div class="row" ng-include="'components/companies/company.list.item.html'"></div>
+                                <div ng-if="$last" style="margin-bottom:-32px;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="hpanel forum-box" style="overflow: hidden;">
 
-                    <div class="panel-heading" style="border-bottom: 2px solid #34495E;">
-                        <h3>Top Industries</h3>
+                    <div class="panel-heading" style="border-bottom: 2px solid #3498db">
+                        <h3>Top Skills</h3>
+                        <small class="small-column-title"># People</small>
                     </div>
 
-                    <div class="panel-body" ng-repeat="item in dashboard.top.parents | limitTo: 5">
+                    <div class="panel-body" ng-repeat="item in dashboard.top.skills.entries | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
-                                <a ui-sref="community.dashboard({community_path: item.label, community: nav.communities[item.label], query: '*', location_path: nav.location.key})"><h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4></a>
-                                <uib-progressbar value="item.value" max="dashboard.max" type="success" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
+                                <a ui-sref="search.dashboard({location_path: dashboard.location_path, community_path: dashboard.community_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
+                                <uib-progressbar ng-attr-value="(item.count/dashboard.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
-                                <span class="number number-column">{{((item.value / dashboard.max)*100).toFixed(0)}}%</span>
+                                <span class="number number-column">{{item.count}}</span>
                             </div>
                         </div>
                     </div>
@@ -170,25 +189,25 @@
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="hpanel forum-box" style="overflow: hidden;">
 
-                    <div class="panel-heading" style="border-bottom: 2px solid #3498db">
-                        <h3>Top Skills</h3>
-                        <small class="small-column-title"># People</small>
+                    <div class="panel-heading" style="border-bottom: 2px solid #34495E;">
+                        <h3>Top Industries</h3>
                     </div>
 
-                    <div class="panel-body" ng-repeat="item in dashboard.top.skills.entries | limitTo: 5">
+                    <div class="panel-body" ng-repeat="item in dashboard.top.parents | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
-                                <a ui-sref="search.dashboard({location_path: dashboard.location_path, community_path: dashboard.community_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                                <uib-progressbar ng-attr-value="(item.count/dashboard.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
+                                <a ui-sref="community.dashboard({community_path: item.label, community: nav.communities[item.label], query: '*', location_path: nav.location.key})"><h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4></a>
+                                <uib-progressbar value="item.value" max="dashboard.max" type="success" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
-                                <span class="number number-column">{{item.count}}</span>
+                                <span class="number number-column">{{((item.value / dashboard.max)*100).toFixed(0)}}%</span>
                             </div>
                         </div>
                     </div>
 
                 </div>
             </div>
+
         </div>
     </div>
 </div>
