removed company from welcome

--- a/app/components/companies/company.dashboard.html
+++ b/app/components/companies/company.dashboard.html
@@ -19,7 +19,7 @@
                 <h3 style="padding-top: 5px;" style="line-height: 1.5;">
                     {{::profile.company.profile.headline}}
                 </h3>
-                <div style="margin-top:-18px;">
+                <div style="margin-top:-18px; margin-bottom: -8px;">
                     <a href="{{'http://' + profile.company.profile.website}}" target="_blank" style="font-size:14px; color: #6DC8EE;">{{::profile.company.profile.website}}</a>
                 </div>
                 <div style="overflow: hidden; height: 40px; margin-bottom: -10px;">
