--- a/app/components/welcome/welcome.invite.html
+++ b/app/components/welcome/welcome.invite.html
@@ -21,6 +21,7 @@
     </div>
     <h4 style="margin-bottom: 13px;">
         <a class="btn btn-info pull-left" ui-sref="welcome.companies">Back</a>
-        <a class="btn btn-info pull-right" ng-click="welcome.submit()">Finish</a></h4>
+        <button ladda="welcome.submitted" class="btn btn-info pull-right" ng-click="welcome.submit()">Finish</button>
+    </h4>
 </div>
 
